--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family:  NotiIcons
+      fonts:
+       - asset: fonts/NotiIcons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
