--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   bloc: ^3.0.0
   flutter_bloc: ^3.2.0
   equatable: ^1.1.0
+  qr_code_scanner: ^0.0.12
+
 
   cached_network_image: ^2.0.0
 
