--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
 
   firebase_core: ^0.4.3+2
+  firebase_messaging: ^6.0.13
   cloud_firestore: ^0.13.0+1
 
   shared_preferences: ^0.5.6+2
