--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_bloc: ^3.2.0
   equatable: ^1.1.0
   qr_code_scanner: ^0.0.12
+  qr_flutter: ^3.2.0
 
 
   cached_network_image: ^2.0.0
