--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   qr_code_scanner: ^0.0.12
   qr_flutter: ^3.2.0
   image_picker: ^0.6.4
+  flutter_speed_dial: ^1.2.5
 
 
   cached_network_image: ^2.0.0
