--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   firebase_core: ^0.4.3+2
   cloud_firestore: ^0.13.0+1
+  firebase_storage: ^3.1.5
 
   shared_preferences: ^0.5.6+2
 
