--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   firebase_core: ^0.4.3+2
   cloud_firestore: ^0.13.0+1
   firebase_storage: ^3.1.5
@@ -60,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/
+   - i18n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
