--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_messaging: ^6.0.13
   cloud_firestore: ^0.13.0+1
   firebase_storage: ^3.1.5
+  googleapis_auth: any
 
   shared_preferences: ^0.5.6+2
 
@@ -34,6 +35,7 @@ dependencies:
   qr_flutter: ^3.2.0
   image_picker: ^0.6.4
   flutter_speed_dial: ^1.2.5
+  http: ^0.12.0+2
 
 
   cached_network_image: ^2.0.0
